--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,7 @@
 name: Generate Contributor Pie Chart
 
 on:
-  workflow_dispatch:   
-    inputs:
-      chart-size:
-        description: 'Size of the chart'
-        required: false
-        default: '6,6'
+  workflow_call:  
 
 jobs:
   chart:
@@ -23,8 +18,7 @@ jobs:
         run: pip install matplotlib
 
       - name: Generate Chart
-        run: |
-          python .github/actions/contrib-pie/scripts/generate.py ${{ inputs.chart-size }}
+        run: python scripts/generate.py
 
       - name: Commit Chart
         run: |
