--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
         type: string
         default: '6,6'
 
-
 jobs:
   chart:
     runs-on: ubuntu-latest
@@ -24,7 +23,7 @@ jobs:
         run: pip install matplotlib
 
       - name: Generate Chart
-        run: python scripts/generate.py
+        run: python scripts/generate.py ${{ inputs.chart-size }}
 
       - name: Commit Chart
         run: |
