--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,20 +12,24 @@ jobs:
   chart:
     runs-on: ubuntu-latest
     steps:
-      # Checkout the caller repository if needed
+      # Checkout the repository from the caller (if needed)
       - name: Checkout Caller Repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # Explicitly checkout the generator repo
+      # Checkout the generator repository fully into a subdirectory called "generator"
       - name: Checkout Generator Repo
         uses: actions/checkout@v4
         with:
           repository: redfyel/contrib-pie-generator
-          token: ${{ secrets.GITHUB_TOKEN }}  # Ensure proper access
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
           path: generator
+
+      # Debug: list contents of the generator directory to verify generate.py is present
+      - name: List Generator Directory
+        run: ls -la generator
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -35,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: pip install matplotlib
 
-      # Run the generate.py script from the checked-out generator repo directory
+      # Execute generate.py from the generator directory using the provided chart size input
       - name: Generate Chart
         run: python generator/generate.py ${{ inputs.chart-size }}
 
