--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add contributor-pie.png
           git commit -m "📊 Auto-update contributor pie chart" || echo "No changes"
-          git push
+          git push https://x-access-token:${{ secrets.PUSH_TOKEN }}@github.com/${{ github.repository }}.git
+
