--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install matplotlib
+        run: pip install matplotlib requests
 
       - name: Generate Chart
         run: |
